<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CongregacionesMainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/congregaciones"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:text="CONGREGACIONES" />

            <Button
                android:id="@+id/btnAñadirCongregacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/anadir_congregacion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblTitulo"
                tools:ignore="MissingConstraints"
                android:onClick="onClick" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/ingresar_asistencia"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAñadirCongregacion"
                tools:ignore="MissingConstraints" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="344dp"
                android:layout_height="47dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/btnIngresarAsistencia"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:onClick="onClick"
                    android:enabled="false"
                    android:text="@string/btnEntrar" />

                <Spinner
                    android:id="@+id/spnAsistencia"
                    android:layout_width="204dp"
                    android:layout_height="45dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/lblTituloPub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/publicadores"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnAnadirPublicador"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/a_adir_publicador"
                app:layout_constraintBottom_toTopOf="@+id/btnIngresarActividad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblTituloPub"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/btnActualizarPublicador"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="ACTUALIZAR PUBLICADOR"
                app:layout_constraintBottom_toTopOf="@+id/btnIngresarActividad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAnadirPublicador"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/btnIngresarActividad"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ingresar_actividad_de_publicador"
                app:layout_constraintBottom_toTopOf="@+id/btnConsultaActividad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnActualizarPublicador"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/btnActualizarActividad"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ingresar_actualizaci_n_de_actividad"
                app:layout_constraintBottom_toTopOf="@+id/btnConsultaActividad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnIngresarActividad"
                android:onClick="onClick"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>